--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "invoice-app",
   "version": "1.0.0",
-  "description": "![Design preview for the Invoice app coding challenge](./preview.jpg)",
+  "description": "Invoice app from Frontend Mentor",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "repository": {
     "type": "git",
